# opppo

./: OPPPO.sln
Debug/: OPPPO1.ilk
OPPPO1/: Ball.cpp  Ball.h  CMakeLists.txt  ErrorCode.h  Figures.cpp  Figures.h  FunctionReader.cpp  FunctionReader.h  List.cpp  List.h  Node.h  OPPPO1.vcxproj  OPPPO1.vcxproj.filters  OPPPO11.APS  OPPPO11.rc  Parallelepiped.cpp  Parallelepiped.h  Pyramid.cpp  Pyramid.h  RCa05084  RCa13336  ReadColor.cpp  ReadColor.h  ReadOwner.cpp  ReadOwner.h  Reader.cpp  Reader.h  ReaderPyramid.cpp  ReaderPyramid.h  in.txt  main.cpp
OPPPO1/Debug/: OPPPO1.exe.recipe  vc142.idb
OPPPO1/Debug/OPPPO1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OPPPO1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OPPPO1/x64/Debug/: OPPPO.exe.recipe  OPPPO1.exe.recipe  RCa06564  opppo1.obj.enc  vc142.idb
OPPPO1/x64/Debug/OPPPO.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OPPPO.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
OPPPO1/x64/Debug/OPPPO1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OPPPO1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
OPPPO1/x64/Release/: OPPPO1.exe.recipe  RCa13256
OPPPO1/x64/Release/OPPPO1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OPPPO1.lastbuildstate  OPPPO1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: OPPPO.ilk  OPPPO1.ilk
x64/Release/: OPPPO1.iobj  (+2 more)
